2012-10-31  Andrew Burgess  <aburgess@broadcom.com>

	PR cli/14772
	* gdb.base/gnu_vector.c (union_with_vector_1)
	(struct_with_vector_1): Add new struct and union for testing
	ptype.
	* gdb.base/gnu_vector.exp: Add testing of ptype on vectors, and
	structs / unions containing vectors.

2012-10-25  Yao Qi  <yao@codesourcery.com>

	* gdb.trace/ftrace.exp (test_fast_tracepoints): Use
	'setup_kfail' instead of 'setup_kfail_for_target'.
	* gdb.base/varargs.exp: Likewise.
	* lib/gdb.exp (setup_kfail_for_target): Remove.

2012-10-25  Mark Kettenis  <kettenis@openbsd.nfra.nl>

	* gdb.base/varargs.exp: PR gdb/12790 is now fixed.

2012-10-25  Mark Kettenis  <kettenis@gnu.org>

	* gdb.base/varargs.exp: PR gdb/12776 is now fixed.

2012-10-24  Joel Brobecker  <brobecker@adacore.com>

	* gdb.ada/set_wstr: New testcase.

2012-10-24  Joel Brobecker  <brobecker@adacore.com>

	* gdb.base/ldbl_e308.c, gdb.base/ldbl_e308.exp: New files.

2012-10-24  Joel Brobecker  <brobecker@adacore.com>

	* gdb.ada/unc_arr_ptr_in_var_rec: New testcase.

2012-10-24  Mark Kettenis  <kettenis@gnu.org>

	* gdb.base/callfuncs.exp: PR gdb/12783 is now fixed.

2012-10-24  Jan Kratochvil  <jan.kratochvil@redhat.com>

	* gdb.base/callfuncs.exp (do_function_calls): Fix
	setup_kfail_for_target for -m32 mode.

2012-10-23  Mark Kettenis  <kettenis@gnu.org>

	* gdb.base/callfuncs.exp: PR gdb/12796, gdb/12798 and gdb/12800
	are now fixed.

2012-10-23  Yao Qi  <yao@codesourcery.com>

	* gdb.base/info-os.exp: Resume the inferior until it exits.

2012-10-18  Yufeng Zhang  <yufeng.zhang@arm.com>

	* gdb.base/ctxobj.exp: Skip if skip_shlib_tests returns true.
	* gdb.base/print-file-var.exp: Likewise.
	* gdb.base/type-opaque.exp: Likewise.

2012-10-17  Yao Qi  <yao@codesourcery.com>

	* gdb.mi/mi-memory-changed.exp: New.

2012-10-16  Yao Qi  <yao@codesourcery.com>

	* gdb.reverse/solib-precsave.exp: Skip if skip_shlib_test
	returns true.
	Call gdb_load_shlibs.
	* gdb.reverse/solib-reverse.exp: Likewise.
